[package]
name = "btc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.1.18", features = ["derive"] }
config = { version = "0.13", features = ["toml"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["gzip", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
